<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:baselineAligned="false"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="android.google.com.androidspeedometer.MainActivity">

    <RelativeLayout
        android:id="@+id/topHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textClock"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textClock"
            android:text="current time"
            android:textAlignment="center"/>

        <TextClock
            android:id="@+id/textClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvStopWatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="00.00"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/tvStopWatch"
            android:layout_below="@+id/tvStopWatch"
            android:text="trip time"
            android:textAlignment="center"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/textHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/btnHolder"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp">

        <TextView
            android:id="@+id/speed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/_123_45"
            android:textSize="110sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/speedTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="0"
            android:maxLines="1"
            android:text="@string/mph"
            android:textColor="@color/colorMainText"
            android:textSize="25sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/btnHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textViewMaxSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="00.00"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/textViewMaxSpeed"
            android:text="MAX"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/start_updates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/start_button"
            android:gravity="center"
            android:text="@string/start_updates"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewAverageSpeed"
            android:layout_alignBottom="@+id/textViewAverageSpeed"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/textViewAverageSpeed"
            android:text="AVG"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textViewAverageSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="00.00"
            android:textSize="32sp"
            android:textStyle="bold"/>


    </RelativeLayout>


</RelativeLayout>
